--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.8",
+    "@preact/signals": "^2.0.1",
+    "@tailwindcss/vite": "^4.0.5",
     "hono": "^4.6.20",
-    "preact-iso": "^2.9.0"
+    "preact": "^10.25.4",
+    "preact-iso": "^2.9.0",
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat",
+    "tailwindcss": "^4.0.5"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.0",
