--- a/package.json
+++ b/package.json
@@ -2,27 +2,33 @@
   "name": "app",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/server.tsx",
-    "bundle": "vite build -w"
+    "dev": "NODE_ENV=development vite",
+    "build": "NODE_ENV=production vite build --mode client && vite build"
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-alpha.6",
-    "@hono/node-server": "^1.13.8",
     "@preact/signals": "^2.0.1",
-    "@tailwindcss/vite": "^4.0.5",
+    "dotenv": "^16.4.7",
     "hono": "^4.6.20",
+    "lodash-es": "^4.17.21",
     "preact": "^10.25.4",
     "preact-iso": "^2.9.0",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat",
-    "react-is": "npm:@preact/compat",
-    "tailwindcss": "^4.0.5"
+    "react-is": "npm:@preact/compat"
   },
   "devDependencies": {
+    "@hono/node-server": "^1.13.8",
+    "@hono/vite-build": "^1.3.0",
+    "@hono/vite-dev-server": "^0.18.1",
     "@preact/preset-vite": "^2.10.0",
-    "@types/node": "^20.11.17",
+    "@tailwindcss/vite": "^4.0.5",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20.17.17",
     "prettier": "^3.4.2",
+    "tailwindcss": "^4.0.5",
     "tsx": "^4.7.1",
+    "typescript": "^5.7.3",
     "vite": "^6.0.11"
   }
 }
