--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "type": "module",
   "scripts": {
-    "dev": "NODE_ENV=development vite --force",
+    "dev": "NODE_ENV=development vite",
     "build": "NODE_ENV=production vite build --mode client && vite build"
   },
   "dependencies": {
@@ -22,10 +22,12 @@
     "@hono/vite-build": "^1.3.0",
     "@hono/vite-dev-server": "^0.18.1",
     "@preact/preset-vite": "^2.10.0",
-    "@tailwindcss/vite": "^4.0.5",
+    "@tailwindcss/postcss": "^4.0.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.17.17",
+    "postcss": "^8.5.2",
     "prettier": "^3.4.2",
+    "sass-embedded": "^1.85.0",
     "tailwindcss": "^4.0.5",
     "tsx": "^4.7.1",
     "typescript": "^5.7.3",
