--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "type": "module",
   "scripts": {
     "dev": "NODE_ENV=development vite",
-    "build": "NODE_ENV=production vite build --mode client && vite build"
+    "build": "NODE_ENV=production vite build --mode client && vite build",
+    "preview": "npm run build && node dist/index.js"
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-alpha.6",
@@ -26,6 +27,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.17.17",
     "postcss": "^8.5.2",
+    "preact-render-to-string": "^6.5.13",
     "prettier": "^3.4.2",
     "sass-embedded": "^1.85.0",
     "tailwindcss": "^4.0.5",
