--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "type": "module",
   "scripts": {
     "dev": "NODE_ENV=development vite",
-    "server": "NODE_ENV=production vite build --watch",
-    "client": "NODE_ENV=production vite build --mode client --watch",
     "build": "NODE_ENV=production vite build --mode client && vite build",
     "preview": "npm run build && npm run start",
-    "start": "NODE_ENV=production nodemon ./dist/index.js"
+    "start": "NODE_ENV=production node ./dist/index.js"
   },
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-alpha.6",
@@ -29,7 +27,6 @@
     "@tailwindcss/postcss": "^4.0.6",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.17.17",
-    "nodemon": "^3.1.9",
     "postcss": "^8.5.2",
     "preact-render-to-string": "^6.5.13",
     "prettier": "^3.4.2",
