--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lodash-es": "^4.17.21",
     "motion": "^12.4.7",
     "preact": "^10.25.4",
-    "preact-iso": "github:preactjs/preact-iso#fix/double-render",
+    "preact-iso": "github:preactjs/preact-iso#v3",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat",
     "react-is": "npm:@preact/compat"
