--- a/package.json
+++ b/package.json
@@ -5,36 +5,37 @@
     "dev": "NODE_ENV=development vite --force",
     "build": "NODE_ENV=production vite build --mode client && vite build",
     "preview": "npm run build && npm run start",
-    "start": "NODE_ENV=production node ./dist/index.js"
+    "start": "NODE_ENV=production node ./dist/index.js",
+    "updates": "npx npm-check-updates -i --format group"
   },
   "dependencies": {
-    "@base-ui-components/react": "^1.0.0-alpha.6",
-    "@preact/signals": "^2.0.1",
+    "@base-ui-components/react": "^1.0.0-alpha.7",
+    "@preact/signals": "^2.0.3",
     "dotenv": "^16.4.7",
-    "hono": "^4.6.20",
+    "hono": "^4.7.5",
     "lodash-es": "^4.17.21",
-    "motion": "^12.4.7",
-    "preact": "https://github.com/preactjs/preact",
+    "motion": "^12.6.3",
+    "preact": "^10.26.5",
     "preact-iso": "github:preactjs/preact-iso#v3",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat",
     "react-is": "npm:@preact/compat"
   },
   "devDependencies": {
-    "@hono/node-server": "^1.13.8",
-    "@hono/vite-build": "^1.3.0",
-    "@hono/vite-dev-server": "^0.18.1",
-    "@preact/preset-vite": "^2.10.0",
-    "@tailwindcss/postcss": "^4.0.6",
+    "@hono/node-server": "^1.14.0",
+    "@hono/vite-build": "^1.5.0",
+    "@hono/vite-dev-server": "^0.19.0",
+    "@preact/preset-vite": "^2.10.1",
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.17.17",
-    "postcss": "^8.5.2",
+    "@types/node": "^22.14.0",
+    "postcss": "^8.5.3",
     "preact-render-to-string": "^6.5.13",
-    "prettier": "^3.4.2",
-    "sass-embedded": "^1.85.0",
-    "tailwindcss": "^4.0.5",
-    "tsx": "^4.7.1",
-    "typescript": "^5.7.3",
-    "vite": "^6.0.11"
+    "prettier": "^3.5.3",
+    "sass-embedded": "^1.86.3",
+    "tailwindcss": "^4.1.3",
+    "tsx": "^4.19.3",
+    "typescript": "^5.8.3",
+    "vite": "^6.2.5"
   }
 }
