--- a/package.json
+++ b/package.json
@@ -9,33 +9,31 @@
     "updates": "npx npm-check-updates -i --format group"
   },
   "dependencies": {
-    "@base-ui-components/react": "^1.0.0-alpha.7",
-    "@preact/signals": "^2.0.3",
-    "dotenv": "^16.4.7",
-    "hono": "^4.7.5",
-    "lodash-es": "^4.17.21",
-    "motion": "^12.6.3",
-    "preact": "^10.26.5",
+    "@base-ui-components/react": "^1.0.0-beta.2",
+    "@preact/signals": "^2.3.1",
+    "dotenv": "^17.2.1",
+    "hono": "^4.9.4",
+    "motion": "^12.23.12",
+    "preact": "^10.27.1",
     "preact-iso": "github:preactjs/preact-iso#v3",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat",
     "react-is": "npm:@preact/compat"
   },
   "devDependencies": {
-    "@hono/node-server": "^1.14.0",
-    "@hono/vite-build": "^1.5.0",
-    "@hono/vite-dev-server": "^0.19.0",
-    "@preact/preset-vite": "^2.10.1",
-    "@tailwindcss/postcss": "^4.1.3",
-    "@types/lodash-es": "^4.17.12",
-    "@types/node": "^22.14.0",
-    "postcss": "^8.5.3",
-    "preact-render-to-string": "^6.5.13",
-    "prettier": "^3.5.3",
-    "sass-embedded": "^1.86.3",
-    "tailwindcss": "^4.1.3",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.3",
-    "vite": "^6.2.5"
+    "@hono/node-server": "^1.19.0",
+    "@hono/vite-build": "^1.7.0",
+    "@hono/vite-dev-server": "^0.20.1",
+    "@preact/preset-vite": "^2.10.2",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@types/node": "^24.3.0",
+    "postcss": "^8.5.6",
+    "preact-render-to-string": "^6.6.1",
+    "prettier": "^3.6.2",
+    "sass-embedded": "^1.90.0",
+    "tailwindcss": "^4.1.12",
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.3"
   }
 }
