--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@preact/preset-vite": "^2.10.3",
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^24.3.0",
+    "miniflare": "^4.20260219.0",
     "postcss": "^8.5.6",
     "preact-render-to-string": "^6.6.5",
     "prettier": "^3.8.1",
@@ -33,6 +34,7 @@
     "tailwindcss": "^4.1.18",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "vite": "^7.3.1"
+    "vite": "^7.3.1",
+    "wrangler": "^4.67.0"
   }
 }
