Migrate to Cloudflare workers and update scripts
- Port server to Cloudflare Workers by switching build target
- Remove static dist bootstrap; rely on Hono runtime
- Update npm scripts: preview uses wrangler dev
- Update Vite config to build for Cloudflare Workers
- Ignore .wrangler in gitignore

--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "scripts": {
     "dev": "NODE_ENV=development vite --force",
     "build": "NODE_ENV=production vite build --mode client && vite build",
-    "preview": "npm run build && npm run start",
-    "start": "NODE_ENV=production node ./dist/index.js",
     "updates": "npx npm-check-updates -i --format group",
-    "deploy": "wrangler deploy"
+    "deploy": "wrangler deploy",
+    "preview": "wrangler dev"
   },
   "dependencies": {
     "@preact/signals": "^2.8.1",
