Add in-memory movie data and switch to local data
- Remove preact/debug import
- Add in-memory movie data modules (movie.ts, movies.ts)
- Serve data from local in-memory store instead of API
- Update preview to run build before dev
- Update tsconfig to include JSON and minor formatting

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "NODE_ENV=production vite build --mode client && vite build",
     "updates": "npx npm-check-updates -i --format group",
     "deploy": "wrangler deploy",
-    "preview": "wrangler dev"
+    "preview": "npm run build && wrangler dev"
   },
   "dependencies": {
     "@preact/signals": "^2.8.1",
