--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,10 +25,10 @@
     "baseUrl": ".",
     "outDir": "./dist",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
     },
-    "types": ["vite/client"]
+    "types": ["vite/client"],
   },
   "exclude": ["node_modules/**/*"],
-  "include": ["./src/**/*.tsx", "./src/**/*.ts"]
+  "include": ["./src/**/*.tsx", "./src/**/*.ts", "./src/**/*.json"],
 }
